# sdk

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Kconfig  LICENSE  README.md  config.env  kconfigs.in  sdkconfig
config/: CMakeLists.txt  Kconfig
config_provider/: CMakeLists.txt
config_provider/include/: ConfigProvider.hpp  ConvichProvider.hpp  ConvigProfider.hpp
disp_driver/: CMakeLists.txt  kconfig
disp_driver/include/: display.hpp
disp_driver/src/: display.cpp
http_server/: CMakeLists.txt  config
http_server/include/: HttpServer.hpp  HttpStatusCode.hpp
http_server/src/: HttpServer.cpp
led_strip/: CMakeLists.txt  Kconfig
led_strip/include/: led_strip.hpp
led_strip/src/: led_strip.cpp
manager/: CMakeLists.txt  Kconfig  config
manager/include/: Component.hpp  Manager.hpp  component.hpp  manager.hpp
manager/src/: Manager.cpp  manager.cpp
messages/: CMakeLists.txt
messages/include/: messages.h
messages/src/: messages.cpp
mock_component/: CMakeLists.txt
mock_component/include/: MockComponent.hpp  mock_component.hpp
mock_component/src/: MockComponent.cpp  mock_component.cpp
network_manager/: CMakeLists.txt  config  kconfig
network_manager/include/: NetworkManager.hpp  network_manager.hpp
test/: test_manager.cpp
util/: CMakeLists.txt
webserver/: CMakeLists.txt
wifi/: CMakeLists.txt  config  kconfig
wifi_ap/: CMakeLists.txt  kconfig
wifi_sta/: CMakeLists.txt  kconfig
wifi_station/: CMakeLists.txt  Kconfig
wifi_station/include/: wifi_station.hpp
wifi_station/src/: wifi_station.cpp
(+19 files in other folders)
